--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,6 +11,15 @@ $icon-font-path: '../fonts/';
   padding: 0.2em 0;
 }
 
+#info {
+	position: absolute;
+	top: 10px;
+	width: 100pc;
+	text-align: center;
+}
+
 body {
-  padding: 0px;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
